<resources>
    <string name="app_name">科技健康周</string>
    <string name="touch_Capture">扫描二维码</string>
    <string name="action_settings">Settings</string>
    <string name="msg_camera_framework_bug">抱歉，Android相机出现问题。您可能需要重启设备。</string>
    <string name="capture_head_title">扫一扫</string>
    <string name="sequence">序言</string>
    <string name="medicalkit">医疗包</string>
    <string name="title_activity_activity_main_frame">ActivityMainFrame</string>
    <string name="title_activity_main_frame">MainFrame</string>
    <string name="title_activity_medicalkit">Medicalkit</string>
    <string name="caption_medicalkit">医疗包</string>
    <string name="user_account">账号：</string>
    <string name="user_password">密码：</string>
    <string name="title_activity_physicalhealthresult">PhysicalHealthResult</string>
    <string name="welcomUserInfo">早上好！kaogongji@126.com</string>
    <string name="physical_health_data">肺活量：2433ml\n标准值：>1213ml\n您的孩子肺部健康，适合做运动员</string>
    <string name="physical_health_capthion">生理\n健康 结果</string>
    <string name="health_e_home">健康e家</string>
    <string name="health_experience">健康体验</string>
    <string name="health_diet">健康点播</string>
    <string name="heart_rate">心电值</string>
    <string name="heart_rate_well">恭喜您！\n今日您的心电值\n非常平稳</string>
    <string name="detailed_param">详细参数</string>
    <string name="blood_pressure">血压值</string>
    <string name="blood_sweet">血糖值</string>
    <string name="creator_platform">创客平台</string>
    <string name="dangdelion_scheme">蒲公英计划</string>
    <string name="title_activity_dandelion_scheme_frame">DandelionSchemeFrame</string>
    <string name="hello_world">Hello world!</string>
    <string name="dandelion_scheme_body_commu">蒲公英计划——人体通信</string>
    <string name="idea_sharer">爱普者</string>
    <string name="little_dandelion">小蒲</string>
    <string name="genius">天才</string>
    <string name="intelligences">智囊团</string>
    <string name="doctor">博士</string>
    <string name="promising_future">展望未来</string>
    <string name="my_dandelion">蒲公英计划——我的蒲公英</string>
    <string name="product_introduction">产品发散思路：人体通讯设备可以运用在贴身穿戴式设备上。
        手环根据你的睡眠质量、心情、天气等一系列综合数据为你推荐今天适合的衣服和适合做的运动等。</string>
    <string name="nickname">昵称：爱普者</string>
    <string name="gender">性别：</string>
    <string name="age">年龄：28</string>
    <string name="career">职业：设计师</string>
    <string name="sharer_level">创客等级：</string>
    <string name="sensible_bed">感知床</string>
    <string name="general_health_status">健康状况总体良好</string>
    <string name="sleep_quality">睡眠质量欠佳</string>
    <string name="sensible_bed_tips">适量运动有助于您的睡眠</string>
    <string name="hrv">HRV</string>
    <string name="breath_freq">呼吸节律</string>
    <string name="sleep_status">夜间翻身次数</string>
    <string name="scan_qrcode">扫描二维码</string>
    <string name="generate_qrcode">合成二维码</string>
    <string name="generate_qrcode_direction">请将三个人物拖进方框内\n将自动合成二维码</string>
    <string name="generation_succeed_tip">在移动互联网的大环境下，科研、科普、科技产品转化最终能做到相辅相成、相互联系。</string>
    <string name="welcome_caption">2014北京科技周\n中科院移动健康主题展</string>
	<string name="show_body_led">翻身次数</string>
	<string name="medicalkit_starting_display_descriptions">在中国，空巢老人近1亿，\n留守儿童6100万\n这些人基本没有“体检”的意识，\n
	    一些重大疾病潜伏在这些人群中不被重视。\n\n多参数健康检查仪，\n能够提供10余种健康参数检测，\n并结合先进通讯技术，实现云端健康管理。\n守护这些社会弱势群体</string>
	<string name="body_commu_staring_display_descriptions">人体可以导电，这是常识；彼此握手可以交换名片，你听说过嘛？\n当通信设备与人体的电磁波达到耦合时，人体就成为传输数字信息的通道\n
	    我们的身体可以安全、低耗、快捷地进行通信，\n这在未来的医疗、军事、娱乐和电子行业应用前景无限</string>
	<string name="sensible_bed_staring_display_descriptions">在中国，睡眠呼吸暂停综合症患者至少有7000万，\n60岁以上老年人已超2亿，\n
	    俯卧睡觉的婴幼儿发生窒息性猝死的风险是正常睡姿婴幼儿的6倍……\n以上都表明，在睡眠休息时，无干扰、无负重的健康守护极为必要。\n\n不论是在医院、社区康复中心，不论是家庭还是个人，\n此系统可以为您提供实效实时的夜间监护和预警，让您和家人睡得安心。</string>
	<string name="health_ehome_staring_display_descriptions">截至2012年，我国有2.6亿慢性病患者，\n高血压、糖尿病等多种慢性疾病时刻吞噬着人们的健康\n\n
	    电视、手机与电脑三网融合，\n用低成本方式实现日常监护和早期诊断，\n足不出户掌握全家人的生理状况，\n更有医生通过后台数据对健康走向做出及时预判</string>
	<string name="title_activity_haodou">好豆美食</string>
	    <string name="more_than">&#062;</string>
    <string name="less_than">&#060;</string>
    <string name="unit_of_xindian">bpm</string>
    <string name="unit_of_xueya">mmHg</string>
    <string name="unit_of_xuetang">mmol/L</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="common_BP">血压</string>
    <string name="SBPm">收缩压：</string>
    <string name="DBPm">舒张压：</string>
    <string name="PULm">脉率：</string>
    <string name="Notem">备注：</string>
    <string name="PULunit">次/分</string>
    <string name="common_INTERVAL">间隔</string>
    <string name="common_TIME">时间：</string>
    <string name="common_SIGNAL">实时信号</string>
    <string name="common_CLEAR">清除</string>
    <string name="common_HOUR">时</string>
    <string name="common_MINUTE">分</string>
    <string name="common_SECOND">秒</string>
    <string name="common_HR">心率</string>
    <string name="common_TEMPRETURE">体温</string>
    <string name="common_SPO">血氧</string>
    <string name="common_PR">脉率</string>
    <string name="common_OK"><font size="25">确定</font></string>
    <string name="common_ZOOMIN">放大</string>
    <string name="common_ZOOMOUT">缩小</string>
    <string name="common_SAVE">保存</string>
    <string name="common_CANCEL">取消</string>
    <string name="common_ECGSIGNAL">心电信号</string>
    <string name="common_SBP">收缩压</string>
    <string name="common_DBP">舒张压</string>
    <string name="common_ECGDATA">心电数据</string>
    <string name="common_PPGDATA">脉搏数据</string>
    <string name="common_PPGSIGNAL">脉搏信号</string>
    <string name="common_DESCRIPTION">描述</string>
    <string name="common_CHAOSFACTOR">混沌因子</string>
    <string name="common_USERNAME">用户名:</string>
    <string name="common_PASSWORD">密码:</string>
    <string name="common_EXPERIENCE">体验</string>
    <string name="common_EXIT">退出</string>
    <string name="title_about">关\u3000于</string>
    <string name="title_add_members">添加成员</string>
    <string name="commit">提交</string>
    <string name="set_head_photo">设置头像</string>
    <string name="alone_password">独立密码</string>
    <string name="attention">关注</string>
    <string name="role_colon">角色：</string>
    <string name="name_colon">姓名：</string>
    <string name="gender_colon">性别：</string>
    <string name="male_colon">男</string>
    <string name="female_colon">女</string>
    <string name="birthday_colon">出生日期：</string>
    <string name="height_colon">身高(cm)：</string>
    <string name="weight_colon">体重(kg)：</string>
    <string name="age_colon">年龄：</string>
    <string name="title_data_detail">资料详情</string>
    <string name="already_attention">已关注</string>
    <string name="locked">锁定</string>
    <string name="company_name">深圳中科汇康技术有限公司</string>
    <string name="logo_name">健康E家</string>
    <string name="title_choice_role">选择角色</string>
    <string name="role_name_father">爸爸</string>
    <string name="role_name_mather">妈妈</string>
    <string name="role_name_grandpa">爷爷</string>
    <string name="role_name_grandma">奶奶</string>
    <string name="role_name_sun">儿子</string>
    <string name="role_name_daughter">女儿</string>
    <string name="body_state">您的身体战胜了</string>
    <string name="body_state_suffix">的人</string>
    <string name="pass_person">超过3000000人</string>
    <string name="statistics">统计</string>
    <string name="yesterday_abnormal">近日异常</string>
    <string name="month_abnormal">近一月异常</string>
    <string name="year_abnormal">近三月异常</string>
    <string name="his_reports">TA的报告</string>
    <string name="how_many_time">次</string>
    <string name="xiao_e_suggestion">小E建议</string>
    <string name="xiao_tips">小贴士</string>
    <string name="string_their_reports">TA的报告</string>
    <string name="string_my_reports">我的报告</string>
    <string name="one_key_test">一键测试</string>
    <string name="attention_your_family_info">可第一时间看到您家人的异常信息哦！</string>
    <string name="add_your_attention_person">添加关注人！</string>
    <string name="begin_into">开始</string>
    <string name="title_font_setting">字体设置</string>
    <string name="font_big">大</string>
    <string name="font_middle">中</string>
    <string name="font_little">小</string>
    <string name="conneting">连接中...</string>
    <string name="title_rechoice_login_identify">重选角色登录</string>
    <string name="title_choice_login_identify">选择角色登录</string>
    <string name="login_bottom_remarks">\u3000\u3000试用账号将无法进行数据分析，如您需要正式账号，请登录官网进行申请！</string>
    <string name="login_account">帐号：</string>
    <string name="login_account_remarks">请输入邮箱帐号</string>
    <string name="login_password">密码：</string>
    <string name="login_password_remarks">请输入密码</string>
    <string name="register"><u>注册</u></string>
    <string name="try_use">试用</string>
    <string name="forget_password"><u>忘记密码？</u></string>
    <string name="forget_password_title">忘记密码</string>
    <string name="login_button_text">登录</string>
    <string name="begin_taste">立即体验</string>
    <string name="enlarge">放大</string>
    <string name="enlittler">缩小</string>
    <string name="stop_and_upload">停止并上传</string>
    <string name="my_attention">我的关注</string>
    <string name="family_members">家庭成员</string>
    <string name="re_login">重新登陆</string>
    <string name="more_info">更多</string>
    <string name="tips">小贴士</string>
    <string name="title_more_info">更\u3000多</string>
    <string name="bg_settings">背景设置</string>
    <string name="remind_settings">提醒设置</string>
    <string name="unit_settings">单位设置</string>
    <string name="about_app">关于</string>
    <string name="version_num">检查新版本</string>
    <string name="title_my_role">我的角色</string>
    <string name="one_key_test_bottom_remarks">\u3000\u3000角色选择将影响到测试结果评估的准确性和全面性，请一人一角色进行测试。</string>
    <string name="role_confirmation">角色确认</string>
    <string name="funtions_choice">功能选择</string>
    <string name="begin_to_test">开始测试</string>
    <string name="report">报告</string>
    <string name="current_role_is">您当前的角色是：</string>
    <string name="yes_next_step">是，进入下一步</string>
    <string name="no_change_role"><u>否，我要更改角色</u></string>
    <string name="xindian_test">心电测试</string>
    <string name="already_complete">已完成</string>
    <string name="xueya_test">血压测试</string>
    <string name="waiting_for_test">等待测试...</string>
    <string name="check_result">查看测试结果</string>
    <string name="the_next_step">下一步</string>
    <string name="xuetang_test">血糖测试</string>
    <string name="input_password">输入密码：</string>
    <string name="password">密码</string>
    <string name="input_password_again">再次输入：</string>
    <string name="input_verification_code">请输入验证码：</string>
    <string name="complete">完成</string>
    <string name="title_register">注\u3000册</string>
    <string name="account_colon">帐号:</string>
    <string name="register_password">密码:</string>
    <string name="register_password_comfirmation">确定密码:</string>
    <string name="activation_account">请点击下面链接激活账户：</string>
    <string name="set_time_remind">设置时间提醒：</string>
    <string name="set_sms_remind">关注人异常短信提醒：</string>
    <string name="title_report_detail">报告详情</string>
    <string name="title_report_detail_of_xueya">血压报告详情</string>
    <string name="title_report_detail_of_xuetang">血糖报告详情</string>
    <string name="title_report_detail_of_xindian">心电报告详情</string>
    <string name="maibo_colon">脉搏：</string>
    <string name="shou_suo_ya_colon">收缩压(mmHg)：</string>
    <string name="shu_zhang_ya_colon">舒张压(mmHg)：</string>
    <string name="xiao_e_suggetion_of_xueya_detail">建议多运动，适量吃些高蛋白、高脂肪的食物......</string>
    <string name="base_data">基本数据</string>
    <string name="heart_function">心功能参数</string>
    <string name="blood_vessel">外周血管参数</string>
    <string name="pulse_chart">脉搏图</string>
    <string name="found_abnormal">异常指标</string>
</resources>