<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/content_bg"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/xiao_e_item_height"
        android:background="@drawable/content_title_bg" >

        <ImageView
            android:id="@+id/home_page_set_back_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:clickable="true"
            android:src="@drawable/cancer_button_status" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/title_font_setting"
            android:textSize="@dimen/interface_title" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="10dip" >

        <RadioGroup
            android:id="@+id/font_size_rg"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dip"
            android:layout_marginRight="30dip"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/font_little_size"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/font_little"
                android:textSize="@dimen/normal_textsize" />

            <RadioButton
                android:id="@+id/font_middle_size"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/font_middle"
                android:textSize="@dimen/normal_textsize" />

            <RadioButton
                android:id="@+id/font_big_size"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/font_big"
                android:textSize="@dimen/normal_textsize" />
        </RadioGroup>
    </LinearLayout>

</LinearLayout>